# spin-doctor

./: .gitignore  CLAUDE.md  README.md  launch.py  pyproject.toml  setup.py
.github/workflows/: release.yml
resources/: SpinDoctor Menu Bar Extras Icon.fig
resources/SpinDoctor.icon/: icon.json
src/spin_doctor/: __init__.py  app.py
src/spindoctor/: __init__.py  app.py
src/spindoctor/resources/: SpinDoctor.icns
