[project]
name = "spin-doctor"
version = "0.1.0"
description = "macOS menu bar app that detects busy-loop processes and offers to kill them"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rumps>=0.4.0",
    "psutil>=5.9.0",
]

[project.scripts]
spin-doctor = "spin_doctor.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spin_doctor"]

[dependency-groups]
dev = [
    "py2app>=0.28.10",
]
